# hfmc

./: .gitignore  LICENSE  README.md  coordinator.py  downloader.py  hc_acc_cli.toml  hffs.py  http_client.py  http_server.py  main.py  model_manager.py  net_utils.py  peer_manager.py  pyproject.toml  requirements.txt  setup.py  test.py
client/: http_client.py  model_manager.py  peer_manager.py
common/: hf_adapter.py  peer.py  peer_store.py  settings.py
doc/: GUIDELINE.en.md  GUIDELINE.zh.md  README.zh.md  REFERENCE.en.md  REFERENCE.zh.md
docs/: GUIDELINE.en.md  GUIDELINE.zh.md  README.md  README.zh.md  REFERENCE.en.md  REFERENCE.zh.md  _config.yml
hffs/: hffs.py
hffs/client/: conf_manager.py  daemon_manager.py  http_client.py  http_request.py  model_cmd.py  model_controller.py  model_manager.py  noshare_manager.py  peer_cmd.py  peer_controller.py  peer_manager.py  uninstall_cmd.py  uninstall_manager.py
hffs/common/: api_settings.py  context.py  etag.py  hf_adapter.py  hf_wrapper.py  peer.py  peer_store.py  repo_files.py  settings.py
hffs/config/: conf_cmd.py  config_manager.py  hffs_config.py
hffs/daemon/: daemon_cmd.py  manager.py  prober.py  server.py
hffs/daemon/handlers/: daemon_handler.py  fetch_handler.py
hffs/server/: http_server.py  peer_prober.py
hffs/utils/: args.py  logging.py
hfmc/: hfmc.py
hfmc/client/: http_request.py  model_cmd.py  model_controller.py  peer_cmd.py  peer_controller.py  uninstall_cmd.py
hfmc/common/: api_settings.py  context.py  etag.py  hf_wrapper.py  peer.py  repo_files.py
hfmc/config/: conf_cmd.py  config_manager.py  hfmc_config.py
hfmc/daemon/: daemon_cmd.py  manager.py  prober.py  server.py
hfmc/daemon/handlers/: daemon_handler.py  fetch_handler.py  peer_handler.py
hfmc/utils/: args.py  auth_cmd.py  logging.py  yaml.py
server/: http_server.py  peer_prober.py
tests/: test_config_manager.py  test_context.py  test_daemon_client.py  test_etag.py
