[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "hfmc"
version = "0.1.4"
description = "A tiny cache widget for accessing hugging face models easier and faster!"
requires-python = ">=3.8"
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "9# AISoft", email = "aisoft9@163.com" }]
keywords = [
    "huggingface",
    "models",
    "p2p",
    "cache",
    "9# AISoft",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Utilities",
]
dependencies = [
    "aiofiles",
    "aiohttp",
    "huggingface-hub == 0.23.0",
    "prettytable",
    "pydantic",
    "requests",
    "urllib3",
    "psutil",
]

[project.urls]
"GitHub" = "https://github.com/madstorage-dev/hffs"

[project.scripts]
hfmc = "hfmc.hfmc:main"

[tool.hatch.envs.default]
python = "3.8"
dependencies = [
  "toml",
  "ruff",
  "mypy",
  "pyupgrade",
  "pylint",
]

[tool.hatch.envs.test]
extra-dependencies = [
  "pytest",
  "pytest-asyncio",
  "types-PyYAML",
]


[tool.hatch.envs.test.scripts]
unit = "pytest -s"
lint = "pylint -ry -j 0 {args:hfmc}"
format = "ruff format {args:hfmc}"
types = "mypy --install-types --non-interactive --cache-dir=.mypy_cache/ {args:hfmc}"

[tool.ruff]
target-version = "py38"
ignore = [
  "UP006",
  "ANN401",
]
